--- a/TaggyAppFrontend/src/app/components/common/group-select/group-select.component.html
+++ b/TaggyAppFrontend/src/app/components/common/group-select/group-select.component.html
@@ -1,3 +1,3 @@
 <p-dropdown *ngIf="pagedGroups" [options]="pagedGroups.items" [virtualScroll]="true" [lazy]="true"
    [style]="{'width':'100%'}" (onLazyLoad)="onLazyLoad($event)"
-   (onChange)="onChange($event)" optionLabel="name" placeholder="Default" styleClass="mb-2 md:mb-0" />
+   (onChange)="onChange($event)" optionLabel="name" placeholder="Default" />
