--- a/TaggyAppFrontend/src/app/components/common/tag-autocomplete/tag-autocomplete.component.html
+++ b/TaggyAppFrontend/src/app/components/common/tag-autocomplete/tag-autocomplete.component.html
@@ -1,8 +1,6 @@
 <span class="p-fluid">
-   <p-floatLabel>
       <p-autoComplete [(ngModel)]="tags" [suggestions]="tagSuggestions"
          [multiple]="true" [dropdown]="true" [showEmptyMessage]="false"
-         (completeMethod)="onTagSuggestionComplete($event)" (onKeyUp)="onTagKeyUp($event)"
-         [placeholder]="'Tags'" field="name" />
-   </p-floatLabel>
+         (completeMethod)="onTagSuggestionComplete($event)" (onSelect)="onSelect()" (onUnselect)="onUnselect($event)" (onKeyUp)="onTagKeyUp($event)"
+         [placeholder]="'Tags'" field="name"/>
 </span>
