--- a/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.scss
+++ b/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.scss
@@ -17,14 +17,14 @@
     height: 100vh;
   }
 
-  .dashboard-button {
+  .add-button {
     max-height: 100vh;
     position: absolute;
     bottom: 3rem;
     right: 4rem;
   }
 
-  .upload-button {
+  .upload-close-button {
     position: absolute;
     bottom: 1rem;
     left: 50%;
