--- a/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.scss
+++ b/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.scss
@@ -30,6 +30,22 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  .image-container {
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+  }
+
+  .image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
 }
 
 :host ::ng-deep .dashboard {
