--- a/TaggyAppFrontend/src/app/components/common/file/file-upload/file-upload.component.html
+++ b/TaggyAppFrontend/src/app/components/common/file/file-upload/file-upload.component.html
@@ -14,10 +14,7 @@
                   severity="danger" [disabled]="!files || files.length === 0" />
 
             </div>
-            <div class="flex gap-2 align-items-center">
-               <group-select (groupChange)="onGroupChange($event)" />
-               <tag-autocomplete [group]="selectedGroup" [(tags)]="globalTags" />
-            </div>
+            <tag-autocomplete [group]="group" [(tags)]="globalTags" />
             <div class="flex flex-column justify-content-center align-items-end gap-2">
                <p-progressBar [value]="totalSizePercent" [showValue]="false"
                   styleClass="w-15rem sm:w-20rem h-1rem w-full ml-auto"
@@ -39,7 +36,7 @@
                </div>
                <div class="flex flex-row justify-content-evenly align-items-center w-12 md:w-8">
                   <div class="w-4">
-                     <tag-autocomplete [group]="selectedGroup" [(tags)]="file.createFileDto.tags" />
+                     <tag-autocomplete [group]="group" [(tags)]="file.createFileDto.tags" />
                   </div>
                   <div class="w-4 text-center white-space-nowrap">{{ file.browserFile.size | fileSize }}</div>
                   <div class="w-4 flex justify-content-center">
