--- a/TaggyAppFrontend/src/app/components/common/group/group-select/group-select.component.html
+++ b/TaggyAppFrontend/src/app/components/common/group/group-select/group-select.component.html
@@ -1,3 +1,22 @@
-<p-dropdown *ngIf="pagedGroups" [options]="pagedGroups.items" [virtualScroll]="true" [lazy]="true"
-   [style]="{'width':'100%'}" (onLazyLoad)="onLazyLoad($event)" (onChange)="onChange($event)" optionLabel="name"
-   placeholder="Default" />
+<p-button *ngIf="!selectedGroup" icon="pi pi-plus" label="Add group" (onClick)="formVisible = true"></p-button>
+<p-dropdown *ngIf="selectedGroup && pagedGroups" [(ngModel)]="groupId" [options]="pagedGroups.items"
+   [filter]="true" [lazy]="true" [virtualScroll]="this.pagedGroups.pageNum !== this.pagedGroups.totalPages"
+   [virtualScrollItemSize]="rows" [virtualScrollOptions]="options" [style]="{'width':'100%'}"
+   (onLazyLoad)="onLazyLoad($event)" (onChange)="onChange($event)" optionLabel="name" optionValue="id"
+   placeholder="Group" inputId="group-select">
+   <ng-template pTemplate="filter">
+      <p-button icon="pi pi-plus" label="Add group" (onClick)="formVisible = true"></p-button>
+   </ng-template>
+</p-dropdown>
+<p-dialog header="Add New Group" [modal]="true" [(visible)]="formVisible" [style]="{ width: '25rem' }">
+   <form [formGroup]="newGroupForm">
+      <div class="flex flex-column gap-4">
+         <input id="name" formControlName="name" placeholder="Name" pInputText class="w-full" />
+         <input id="description" formControlName="description" placeholder="Description" pInputText class="w-full" />
+         <div class="flex justify-content-end gap-2">
+            <p-button label="Cancel" (onClick)="formVisible = false"></p-button>
+            <p-button label="Add" (onClick)="onSubmit()" [disabled]="newGroupForm.invalid"></p-button>
+         </div>
+      </div>
+   </form>
+</p-dialog>
