--- a/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.html
+++ b/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.html
@@ -5,16 +5,17 @@
    </div>
    <div class="flex flex-column gap-2">
       <div *ngFor="let groupUser of groupUsers" class="flex flex-column">
-         <div class="flex align-items-center h-3rem">
-            <div>
-               <h4 class="m-0 pr-3">{{groupUser.name}}</h4>
-               <p class="m-0">{{groupUser.role}}</p>
+         <div
+            class="group-user p-card flex flex-column sm:flex-row justify-content-between align-items-start sm:align-items-center min-h-3rem w-12 p-2">
+            <div class="flex align-items-center gap-1 pr-3 w-12 sm:w-8">
+               <h4 class="text-ellipsis m-0">{{groupUser.name}}</h4>
+               <p class="text-sm">{{roleToLabel(groupUser.role)}}</p>
             </div>
             <div *ngIf="!isEditing(groupUser) && hasLowerRole(groupUser) && !isCurrentUser(groupUser)">
                <p-button icon="pi pi-pencil" styleClass="p-0" [text]="true" [rounded]="true"
                   (onClick)="onUserEdit(groupUser)" />
                <p-button icon="pi pi-trash" styleClass="p-0" [text]="true" [rounded]="true"
-                  (onClick)="onUserRemove(groupUser)" />
+                  (onClick)="onUserRemove($event, groupUser)" />
             </div>
             <div *ngIf="isEditing(groupUser)" class="flex align-items-center gap-2">
                <p-button icon="pi pi-check" styleClass="p-0" [text]="true" [rounded]="true"
@@ -23,11 +24,10 @@
                   (onClick)="onUserEditCancel()" />
             </div>
          </div>
-         <p-dropdown *ngIf="isEditing(groupUser)" [options]="roleOptions" [(ngModel)]="selectedGroupUser!.role"
+         <p-dropdown *ngIf="isEditing(groupUser)" [options]="roleOptions" [(ngModel)]="editGroupUser!.role"
             [style]="{'width':'100%'}" placeholder="Role">
          </p-dropdown>
       </div>
-
    </div>
 </div>
 <p-dialog header="Add New Member" [modal]="true" [(visible)]="formVisible" [style]="{ width: '25rem' }">
@@ -36,7 +36,7 @@
          <input id="userName" formControlName="userName" placeholder="Username or Email" pInputText class="w-full" />
          <div class="flex justify-content-end gap-2">
             <p-button label="Cancel" (onClick)="formVisible = false"></p-button>
-            <p-button label="Add" (onClick)="onUserAddSubmit()" [disabled]="newGroupUserForm.invalid"></p-button>
+            <p-button type="submit" label="Add" (onClick)="onUserAddSubmit()" [disabled]="newGroupUserForm.invalid"></p-button>
          </div>
       </div>
    </form>
