--- a/TaggyAppFrontend/src/app/components/common/group/group-select/group-select.component.html
+++ b/TaggyAppFrontend/src/app/components/common/group/group-select/group-select.component.html
@@ -15,7 +15,7 @@
          <input id="description" formControlName="description" placeholder="Description" pInputText class="w-full" />
          <div class="flex justify-content-end gap-2">
             <p-button label="Cancel" (onClick)="formVisible = false"></p-button>
-            <p-button label="Add" (onClick)="onSubmit()" [disabled]="newGroupForm.invalid"></p-button>
+            <p-button type="submit" label="Add" (onClick)="onSubmit()" [disabled]="newGroupForm.invalid"></p-button>
          </div>
       </div>
    </form>
