--- a/TaggyAppFrontend/src/styles.scss
+++ b/TaggyAppFrontend/src/styles.scss
@@ -15,3 +15,9 @@ html, body {
     max-height: 100vh;
     overflow: hidden;
 }
+
+.text-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
